<resources>
    <!--Users-->
    <string name="successRegisterMsg">Registado com sucesso</string>
    <string name="passwordErrorMsg">Erro: Palavra-Passe não cumpre os requisitos!</string>
    <string name="emailErrorMsg">Erro: E-mail inválido!</string>
    <string name="welcomeToast">Bem-vindo!</string>
    <string name="welcomeToastPT">Bem-vindo!</string>
    <string name="welcomeToastEN">Welcome!</string>
    <string name="logoutToastEN">Session Ended</string>
    <string name="logoutToastPT">Sessão Terminada</string>
    <string name="errorToast">Erro:</string>

    <!--AR_Sculptures-->
    <string name="ARexception">O Modelo não consegue ser carregado!</string>

    <!--AudioPage-->
    <string name="goBackMusic">Música</string>
    <string name="gobackPaintings">Exposições</string>
    <string name="goBackRooms">Salas</string>
    <string name="goBackCollections">Acervos</string>
    <string name="collectionsBtn">Acervos</string>
    <string name="titleTextView">1900</string>
    <string name="nextBtn">Seguinte</string>
    <string name="previousBtn">Anterior</string>

    <!--AudioPlayer-->
    <string name="dialogAudioText">A carregar áudio...</string>
    <string name="startTime">0:00</string>
    <string name="descriptionAudioPlayer">DESCRIÇÃO</string>

    <!--Authentication-->
    <string name="login">Iniciar Sessão</string>
    <string name="register">Registar</string>
    <string name="backBtn">Voltar V</string>
    <!--Collections-->
    <string name="imageViewTxt1">00</string>

    <!--CollectionsPage-->
    <string name="collectionsTitlePage">ACERVOS</string>

    <!--History-->
    <string name="historyPageTitle">HISTÓRIA</string>

    <!--Library-->
    <string name="libraryTitle">BIBLIOTECA</string>

    <!--Login2-->
    <string name="createAccountLabel">Ainda não tem uma conta?</string>
    <string name="email">E-mail</string>
    <string name="password">Palavra-Passe</string>

    <!--Museum-->
    <string name="museumTopBtn">Esculturas</string>
    <string name="museumTitle">MUSEU</string>
    <string name="showsTitle">EXPOSIÇÕES</string>

    <!--Music-->
    <string name="musicPageTitle">MÚSICA</string>
    <string name="cupertinosTitle">OS CUPERTINOS</string>
    <string name="ciclosTitle">CICLOS DE MÚSICA E POESIA</string>

    <!--PaintingQrCodes-->
    <string name="permissionGranted">Camera permission granted</string>
    <string name="permissionDenied">Camera permission denied</string>
    <string name="validResultDialog">Válido</string>
    <string name="noResultsDialog">Sem Resultados</string>
    <string name="validMessageDialog">Quadro encontrado, vai ser redirecionado para a página!</string>
    <string name="invalidMessageTicket">Não foi encontrado nenhum bilhete com esse número!</string>
    <string name="invalidMessageCode">Não foi encontrado nenhum código com esse número!</string>

    <!--Permanent-->
    <string name="permanentTitle">PERMANENTES</string>

    <!--QrScan-->
    <string name="validTicketMsg">Bilhete válido!</string>

    <string name="validMessageQrScan">Já pode aceder a todas as salas!</string>

    <!--Register-->
    <string name="namePlaceholder">Nome</string>
    <string name="confirmPassword">Confirmar Palavra-Passe</string>
    <string name="hasAlreadyAccount">Já tem uma conta?</string>

    <!--RoomPage-->
    <string name="roomPageTitle">SALAS</string>
    <string name="insertTicketAlertTitle">Código do Bilhete</string>
    <string name="ticketCodeMsg">Insira o código que se encontra no bilhete</string>

    <!--Rooms-->
    <string name="noAccessAlertTitle">Não tem acesso para entrar!</string>
    <string name="scanTicketAccessTxt">Digitalize o seu bilhete para ter acesso</string>
    <string name="scanCodeTxt">Digitalize o Código</string>

    <!--SculpturePage-->
    <string name="sculpturesPageTitle">ESCULTURAS</string>

    <!--Temporary-->
    <string name="temporaryTitle">TEMPORÁRIAS</string>

    <!--Tower-->
    <string name="startTourBtn">Iniciar Visita</string>
    <string name="towertTitlePage">TORRE LITERÁRIA</string>

    <!--menu_tour-->
    <string name="action_settings">Settings</string>

    <!--navigation_drawer-->
    <string name="homePageLabel">Início</string>
    <string name="towerLable">Torre Literária</string>
    <string name="museumLabel">Museu</string>
    <string name="libraryLabel">Biblioteca</string>
    <string name="musicLabel">Música</string>
    <string name="shopLabel">Loja</string>
    <string name="rouletteLabel">Roleta</string>
    <string name="definitionsLabel">Definições</string>
    <string name="logoutLabel">Terminar Sessão</string>

    <!--changePWPage-->
    <string name="changePwToast">Palavra-passe alterada com sucesso!</string>
    <string name="addPwToast">Palavra-passe adicionada com sucesso!</string>
    <string name="currentPassword">Palavra-passe actual</string>
    <string name="newPassword">Nova Palavra-passe</string>
    <string name="confNewPassword">Confirmar nova Palavra-passe</string>
    <string name="changePasswordBtn">Mudar Palavra-passe</string>
    <string name="addPasswordBtn">Adicionar Palavra-passe</string>

    <!--Outros-->
    <string name="FB_APP_ID">3302524869853214</string>
    <string name="fb_login_protocol_scheme">fb3302524869853214</string>
    <string name="app_name">FCM_TOUR</string>
    <string name="title_activity_tour">ScrollingActivity</string>
    <string name="helper_text">Palavra passe tem de conter no minimo 6 caracteres</string>
    <string name="navigation_drawer_open">Open Navigation</string>
    <string name="navigation_drawer_close">Close Navigation</string>
    <string name="title_activity_a_r__sculptures">AR_Sculptures</string>
    <string name="qrCodeState">Bilhete válido</string>
    <string name="alertDialogTitle">Bilhete Válido</string>
    <string name="alert_roulette">Não pode entrar</string>
    <string name="message_roulette">Para aceder à Roleta tem de iniciar sessão</string>
    <string name="message_shop">Para aceder à Loja tem de iniciar sessão</string>

    <!--Roullete-->
    <string name="spin">Rodar</string>
    <string name="awards">Prêmios</string>
    <string name="title_alert_award">Roleta</string>
    <string name="message_award">Parabéns ganhou </string>
    <string name="message_award_2"> Cupertinos</string>
    <string name="title_roulette">Roleta</string>
    <string name="title_awards">Prémios</string>
    <string name="tilte_alert_error">Não é possível rodar</string>
    <string name="message_alert_error">Não pode rodar mais hoje! Apareça amanhã para poder rodar e coletar mais cupertinos</string>

    <!--AwardsPage-->
    <string name="name_form">Nome</string>
    <string name="adress_form">Morada</string>
    <string name="postal_code_form">Código Postal</string>
    <string name="city_form">Cidade</string>
    <string name="get_awards">Redimir</string>
    <string name="title_get_awards">ERRO</string>
    <string name="message_get_award">Alguns campos não foram preenchidos</string>
    <string name="conf_title_get_awards">Confirmação</string>
    <string name="conf_message_get_awards">Confirma que deseja receber este prémio?</string>
    <string name="toast_get_awards">A sua encomenda já está a ser processada</string>
    <string name="back">Voltar</string>
    <string name="no_cupertinos">Não tem cupertinos suficientes para adquirir este prémio, volte aqui todos os dia e jogue na roleta para pode coletar mais cupertinos!</string>

    <!--Quizz-->
    <string name="quizzWonPrize">Parabéns, todas as tuas respostas estão corretas! Demonstras-te ser um verdadeiro sabedor da literatura portuguesa, como recompensa envia-mos-te um email para poderes reclamar o prémio no balcão.</string>
    <string name="quizzParticipation">Obrigado por teres participado neste quizz, infelizmente não acertaste todas as respostas. Tens que estar mais atento para a próxima!</string>
    <string name="startQuizzBtn">Iniciar Quizz</string>
    <string name="goToHomePage">Página Inicial</string>
    <string name="endBtn">TERMINAR</string>

    <!--SideBar-->
    <string name="changeLanguage">Alterar Idioma</string>

    <!--SettingsPage-->
    <string name="usernameTxt">Nome de utilizador</string>
    <string name="emailPlaceholder">username@gmail.com</string>
    <string name="changePassword">Alterar Palavra-passe</string>
    <string name="noImageSelected">Nenhuma imagem selecionada!</string>
    <string name="currentLang">PT</string>
    <string name="deleteAccount">Eliminar Conta</string>
    <string name="deleteAccountDialogTitle">ATENÇÃO</string>
    <string name="deleteAccountDialogMsg">Pretende eliminar a sua conta?</string>
    <string name="deleteBtn">Eliminar</string>
    <string name="cancelBtn">Cancelar</string>
    <string name="titleIntent">Selecionar Imagem</string>
    <string name="deleteAccountToastMsg">Conta Eliminada</string>
    <string name="loadingImageTxt">A carregar imagem...</string>
    <string name="imageUpdatedSuccess">Imagem atualizada</string>
    <string name="confirmOrder">Confirmar</string>

    <!--Shop-->
    <string name="addToCardBtn">Adicionar ao carrinho</string>
    <string name="removeFromCart">Remover do carrinho</string>
    <string name="leaveShop">FCM</string>

    <!--ProductPage-->
    <string name="catalogBtn">Catálogo</string>
    <string name="store">LOJA</string>
    <string name="addToCartResponse">Produto adicionado ao carrinho!</string>
    <string name="removedFromCartResponse">Produto removido do carrinho!</string>


    <!--Shopping Cart-->
    <string name="shopping_cart">CARRINHO</string>
    <string name="finals_shop">FINALIZAR COMPRA</string>
    <string name="emptyCart">O CARRINHO ESTÁ VAZIO!</string>

    <!--Orders-->
    <string name="orderTitle">ENCOMENDA Nº</string>
    <string name="orderState">Em Processamento</string>
    <string name="orderStateDone">Concluído</string>
    <string name="stateTxt">Estado: </string>
    <string name="totalPriceTxt">TOTAL: </string>
    <string name="productsTxt">PRODUTOS</string>

    <!--Payments-->
    <string name="payment">PAGAMENTO</string>
    <string name="finishPayment">Efetuar Pagamento</string>
    <string name="total">Total</string>
    <string name="conf_tittle_pay">Confirmação da sua encomenda</string>
    <string name="conf_message_pay">Após confirmar a sua encomenda receberá no seu email a referência para efetuar o seu pagamento</string>

    <!--Orders-->
    <string name="orders">ENCOMENDAS</string>
    <!--This string is used for square devices and overridden by hello_world in    values-round/strings.xml for round devices.-->
    <string name="hello_world">Hello Square World!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_language">Language</string>


</resources>