<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.Checkout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/stratum1_black"
            android:text="@string/payment"
            android:textColor="@color/black"
            android:textSize="40dp" />

        <ImageView
            android:layout_width="78dp"
            android:layout_height="3dp"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rec"
            android:backgroundTint="@color/shop" />


        <LinearLayout

            android:id="@+id/form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nametxt"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_light" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adress"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/adress_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adressTxt"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_light" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/postalCode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/postal_code_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postalCodeTxt"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_light" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/city_form"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cityTxt"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_light" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_medium"
                    android:text="@string/total"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_medium"
                    android:gravity="right"
                    android:text="100"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="120dp">
            <Button
                android:id="@+id/comeBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelBtn"
                android:textColor="@color/grey"
                android:layout_marginRight="5dp"
                android:background="?android:attr/selectableItemBackground"/>

            <Button
                android:id="@+id/checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_shop"
                android:text="@string/finishPayment"
                app:backgroundTint="@null"
                />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>