<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.QuizzPage">

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="visible">

        <Button
            android:id="@+id/authBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="30dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/startQuizzBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="30dp"
            android:text="@string/startQuizzBtn"
            android:visibility="gone" />

        <Button
            android:id="@+id/ignoreQuizz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/goToHomePage" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quizzLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:id="@+id/questionTxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_medium"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="70dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnA"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/barlow_light"
                    android:tag="A" />

                <Button
                    android:id="@+id/btnC"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_light"
                    android:tag="C" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnB"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/barlow_light"
                    android:tag="B" />

                <Button
                    android:id="@+id/btnD"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/barlow_light"
                    android:tag="D" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/resultTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/endQuizzBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TERMINAR" />
    </LinearLayout>
</FrameLayout>